# optimized_uBlock_algorithm

./: CMakeLists.txt  README.md
AVX2_normal_codes/: AVX2_uBlock_Windows_128_128.cpp  AVX2_uBlock_Windows_128_256.cpp  AVX2_uBlock_Windows_256_256.cpp
avx2_normal/: AVX2_uBlock_Windows_128_128.cpp  AVX2_uBlock_Windows_128_256.cpp  AVX2_uBlock_Windows_256_256.cpp  CMakeLists.txt
optimized_codes/: CMakeLists.txt
optimized_codes/uBlock-128-128/: 128_128_4block_1key.cpp  128_128_4block_4key.cpp
optimized_codes/uBlock-128-256/: 128_256_4block_1key.cpp  128_256_4block_4key.cpp
optimized_codes/uBlock-256-256/: 256_256_2block_1key.cpp  256_256_2block_2key.cpp
optmized_codes/uBlock-128-128/: 128_128_4block_1key.cpp  128_128_4block_4key.cpp
optmized_codes/uBlock-128-256/: 128_256_4block_1key.cpp  128_256_4block_4key.cpp
optmized_codes/uBlock-256-256/: 256_256_2block_1key.cpp  256_256_2block_2key.cpp
original_codes/2-original_codes/: uBlock_Windows_128_128.cpp  uBlock_Windows_128_256.cpp  uBlock_Windows_256_256.cpp
original_codes/3-original_testing_vectors/uBlock_128_128/蒙特卡洛测试/: 蒙特卡洛测试向量.txt
original_codes/3-original_testing_vectors/uBlock_128_256/蒙特卡洛测试/: 蒙特卡洛测试向量.txt
original_codes/3-original_testing_vectors/uBlock_256_256/蒙特卡洛测试/: 蒙特卡洛测试向量.txt
